# serializer version: 1
# name: test_drawing_operations_apply_to_path
  '''
  <p:sp xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <p:nvSpPr>
      <p:cNvPr id="2" name="Freeform 1"/>
      <p:cNvSpPr/>
      <p:nvPr/>
    </p:nvSpPr>
    <p:spPr>
      <a:xfrm>
        <a:off x="0" y="0"/>
        <a:ext cx="0" cy="0"/>
      </a:xfrm>
      <a:custGeom>
        <a:avLst/>
        <a:gdLst/>
        <a:ahLst/>
        <a:cxnLst/>
        <a:rect l="l" t="t" r="r" b="b"/>
        <a:pathLst>
          <a:path w="0" h="0">
            <a:moveTo>
              <a:pt x="0" y="0"/>
            </a:moveTo>
            <a:lnTo>
              <a:pt x="25" y="35"/>
            </a:lnTo>
            <a:moveTo>
              <a:pt x="45" y="55"/>
            </a:moveTo>
            <a:close/>
          </a:path>
        </a:pathLst>
      </a:custGeom>
    </p:spPr>
    <p:style>
      <a:lnRef idx="1">
        <a:schemeClr val="accent1"/>
      </a:lnRef>
      <a:fillRef idx="3">
        <a:schemeClr val="accent1"/>
      </a:fillRef>
      <a:effectRef idx="2">
        <a:schemeClr val="accent1"/>
      </a:effectRef>
      <a:fontRef idx="minor">
        <a:schemeClr val="lt1"/>
      </a:fontRef>
    </p:style>
    <p:txBody>
      <a:bodyPr rtlCol="0" anchor="ctr"/>
      <a:lstStyle/>
      <a:p>
        <a:pPr algn="ctr"/>
      </a:p>
    </p:txBody>
  </p:sp>
  
  '''
# ---
# name: test_freeform_builder_convert_to_shape
  '''
  <p:spTree xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <p:nvGrpSpPr>
      <p:cNvPr id="1" name=""/>
      <p:cNvGrpSpPr/>
      <p:nvPr/>
    </p:nvGrpSpPr>
    <p:grpSpPr/>
    <p:sp>
      <p:nvSpPr>
        <p:cNvPr id="2" name="Freeform 1"/>
        <p:cNvSpPr/>
        <p:nvPr/>
      </p:nvSpPr>
      <p:spPr>
        <a:xfrm>
          <a:off x="15" y="25"/>
          <a:ext cx="140" cy="130"/>
        </a:xfrm>
        <a:custGeom>
          <a:avLst/>
          <a:gdLst/>
          <a:ahLst/>
          <a:cxnLst/>
          <a:rect l="l" t="t" r="r" b="b"/>
          <a:pathLst>
            <a:path w="140" h="130">
              <a:moveTo>
                <a:pt x="0" y="0"/>
              </a:moveTo>
              <a:lnTo>
                <a:pt x="20" y="20"/>
              </a:lnTo>
              <a:lnTo>
                <a:pt x="40" y="40"/>
              </a:lnTo>
              <a:close/>
              <a:moveTo>
                <a:pt x="90" y="80"/>
              </a:moveTo>
              <a:lnTo>
                <a:pt x="140" y="130"/>
              </a:lnTo>
            </a:path>
          </a:pathLst>
        </a:custGeom>
      </p:spPr>
      <p:style>
        <a:lnRef idx="1">
          <a:schemeClr val="accent1"/>
        </a:lnRef>
        <a:fillRef idx="3">
          <a:schemeClr val="accent1"/>
        </a:fillRef>
        <a:effectRef idx="2">
          <a:schemeClr val="accent1"/>
        </a:effectRef>
        <a:fontRef idx="minor">
          <a:schemeClr val="lt1"/>
        </a:fontRef>
      </p:style>
      <p:txBody>
        <a:bodyPr rtlCol="0" anchor="ctr"/>
        <a:lstStyle/>
        <a:p>
          <a:pPr algn="ctr"/>
        </a:p>
      </p:txBody>
    </p:sp>
  </p:spTree>
  
  '''
# ---
